<resources>
    <string name="app_name">台股追蹤</string>
    <string name="title_home">自選股</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_businessNewsList">Business News</string>
    <string name="dialog_addStockNo">加入追蹤</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_editTextHint">請輸入新股票代號</string>
    <string name="stockprice_diff">%1$s%2$s</string>

    <string name="stockprice_open">開: %1$s</string>
    <string name="stockprice_close">收: %1$s</string>
    <string name="stockprice_high">高: %1$s</string>
    <string name="stockprice_low">低: %1$s</string>
    <string name="stockprice_date">日期: %1$s</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="stockNo">代號</string>
    <string name="asset">資產總額(NT$)</string>
    <string name="dialog_confirm_button">OK</string>

    <string name="stockhistory_revenue">%1$s%%</string>
    <string name="add_stock_date_string">%1$d-%2$d-%3$d</string>
<!--    widget -->
    <string name="widget_update_time">%1$s</string>
</resources>