<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="0dp"
        android:paddingVertical="10dp"
        tools:context=".ui.detail.CandleStickChartFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/stockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="台積電" />

            <TextView
                android:id="@+id/stockNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stockName"
                tools:text="2330" />


            <TextView
                android:id="@+id/stockPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="600.00" />

            <TextView
                android:id="@+id/priceDiff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stockPrice"
                tools:text="-3.00" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/chart_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockprice_date"
                tools:context="日期:" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/open"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stockprice_open"
                    tools:context="開:100" />

                <TextView
                    android:id="@+id/close"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stockprice_close"
                    tools:context="收:100" />

                <TextView
                    android:id="@+id/high"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stockprice_high"
                    tools:context="高:100" />

                <TextView
                    android:id="@+id/low"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stockprice_low"
                    tools:context="低:100" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/candle_stick_chart"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/black"
            android:orientation="horizontal">

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="買/賣" />

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="日期" />

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="價位" />

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="股數" />

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="損益" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/invest_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
